Creating AWS CodeBuild file and adjusting build to create executable jar

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ./gradlew build jar
+      - ./gradlew jar
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/messageUtil-1.0.jar
+    - app/build/libs/app.jar
