--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,12 @@ application {
     mainClass = 'com.shammer.coaching.conway.App'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': application.mainClass
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
